--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,11 @@
 <form action="/" method="POST">
   <div class="form-group">
     <input name="text" class="form-control input-lg" type="text" placeholder="Nome do Produto" required>
+    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit">
     <input name="cat" class="form-control input-lg" type="text" placeholder="Categoria do Produto" required>
+    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit">
     <input name="price" class="form-control input-lg" type="text" placeholder="Preço do Produto" required>
+    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit">
   </div>
   
   <input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit">
